# enterprise-ai-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: aiengine-ci.yml  documents-ci.yml  frontend-ci.yml  gateway-ci.yml  identity-ci.yml  processing-ci.yml  proto-validate.yml  realtime-ci.yml
docs/architecture/: 001-monorepo-polyglot.md  002-shared-db-rls.md  003-grpc-contracts.md  004-event-naming-versioning.md  005-ui-design-system.md  README.md
docs/architecture/diagrams/: high-level.mmd  upload-flow.mmd
docs/claw-learnings/: 00-index.md  01-agent-loop.md  02-permission-enforcer.md  03-tool-registry.md  04-provider-abstraction.md  05-session-persistence.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  next.config.mjs  nginx.conf  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(chat)/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: attachment-preview.tsx  chat-input.tsx  chat-messages.tsx  document-upload.tsx  paper-card.tsx  session-sidebar.tsx
frontend/lib/: api-client.ts  auth.ts  ws-client.ts
frontend/public/: index.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: utils.ts
infra/: README.md
infra/grafana/dashboards/: platform-overview.json  token-usage.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/minio/: init-bucket.sh
infra/otel-collector/: config.yaml
infra/postgres/init/: 01-extensions.sql  02-schemas-and-roles.sql  02-schemas.sql  03-rls-helpers.sql  03-tenants-and-rls.sql  04-roles.sql  05-identity-tables.sql  06-documents-tables.sql  07-aiengine-tables.sql
infra/prometheus/: prometheus.yml
protos/: README.md  buf.gen.yaml  buf.yaml
protos/aiengine/v1/: aiengine.proto
protos/common/v1/: error.proto  pagination.proto  tenant.proto
protos/documents/v1/: documents.proto
protos/identity/v1/: identity.proto
protos/processing/v1/: processing.proto
scripts/: e2e-smoke.sh
services/: Directory.Build.props
services/aiengine/: Dockerfile  README.md  pyproject.toml
services/aiengine/src/aiengine/: __init__.py  main.py
services/aiengine/src/aiengine/agent/: __init__.py  hooks.py  loop.py  models.py  repository.py  state.py
services/aiengine/src/aiengine/api/: __init__.py  middleware.py
services/aiengine/src/aiengine/api/routes/: chat.py  documents.py  health.py  sessions.py
services/aiengine/src/aiengine/core/: __init__.py  agent_context.py  config.py  db.py  errors.py  events.py  logging.py  telemetry.py  tenant.py
services/aiengine/src/aiengine/providers/: __init__.py  litellm_provider.py
services/aiengine/src/aiengine/rag/: __init__.py  bm25_client.py  embeddings.py  pipeline.py  qdrant_store.py  reranker.py
services/aiengine/src/aiengine/research/: __init__.py  aggregator.py  arxiv.py  ingestor.py  models.py  openalex.py  semantic_scholar.py  unpaywall.py
services/aiengine/src/aiengine/tools/: __init__.py  base.py  permissions.py  registry.py
services/aiengine/src/aiengine/tools/builtin/: __init__.py  doc_search.py  ingest_paper.py  literature_search.py  web_fetch.py  web_search.py
services/aiengine/tests/: test_health.py  test_smoke.py
services/documents/: Dockerfile  README.md  pom.xml
services/documents/src/main/resources/: application.yml
services/documents/src/test/resources/: application-test.yml
services/gateway/: Dockerfile  Gateway.sln  README.md
services/gateway/src/Gateway.Api/: .dockerignore  Gateway.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
services/gateway/src/Gateway.Api/Auth/: AuthExtensions.cs  TenantContextForwarding.cs
services/gateway/src/Gateway.Api/Extensions/: AuthExtensions.cs  HealthEndpoints.cs  ObservabilityExtensions.cs  ProxyExtensions.cs  RateLimitExtensions.cs  TenantForwardingExtensions.cs
services/gateway/src/Gateway.Api/HealthChecks/: HealthEndpoints.cs
services/gateway/src/Gateway.Api/Properties/: launchSettings.json
services/gateway/src/Gateway.Api/RateLimit/: RateLimitExtensions.cs
services/gateway/src/Gateway.Api/Telemetry/: TelemetryExtensions.cs
services/identity/: Dockerfile  Identity.sln  README.md
services/identity/src/Identity.Api/: Identity.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
services/identity/src/Identity.Api/Endpoints/: AuthEndpoints.cs
services/identity/src/Identity.Application/: DependencyInjection.cs  Identity.Application.csproj
services/identity/src/Identity.Application/Abstractions/: IRefreshTokenRepository.cs  ITokenService.cs  IUserRepository.cs
services/identity/src/Identity.Domain/: Identity.Domain.csproj
services/identity/src/Identity.Domain/Common/: Entity.cs
services/identity/src/Identity.Infrastructure/: DependencyInjection.cs  Identity.Infrastructure.csproj
services/processing/: Cargo.toml  Dockerfile  README.md
services/processing/crates/bm25-index/: Cargo.toml
services/processing/crates/bm25-index/src/: lib.rs
services/processing/crates/chunker/: Cargo.toml
services/processing/crates/chunker/src/: lib.rs
services/processing/crates/processing-server/: Cargo.toml
services/processing/crates/processing-server/src/: config.rs  consumer.rs  db.rs  deletion_consumer.rs  embedder.rs  event.rs  grpc.rs  health.rs  main.rs  pipeline.rs  storage.rs  telemetry.rs  vector_store.rs
services/realtime/: .dockerignore  Dockerfile  README.md  package.json  tsconfig.json
services/realtime/src/: app.module.ts  health.controller.ts  main.ts  telemetry.ts
services/realtime/src/health/: health.controller.ts
services/realtime/src/realtime/: realtime.gateway.ts  realtime.module.ts  token-stream.consumer.ts
services/realtime/src/redis/: redis.module.ts  redis.service.ts
services/realtime/src/websocket/: stream.gateway.ts
(+45 files in other folders)
