[project]
name = "aiengine"
version = "0.1.0"
description = "AI Engine — agent loop, tool registry, RAG pipeline (multi-tenant)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

# Phase C runs on the core dependency set only — FastAPI, LiteLLM, SQLAlchemy,
# Redis, OpenTelemetry. The RAG-side ML stack (torch, sentence-transformers,
# qdrant-client) is gated behind the `ml` extra so the base image stays under
# 300 MB and Docker Desktop on WSL2 doesn't drop the named pipe trying to
# commit a 2 GB layer.
#
# Phase D will switch the build to `uv sync --extra ml` once embeddings and
# vector search are actually called by the running agent loop.

dependencies = [
    # ─── Generated gRPC stubs (source of truth: protos/) ───────────────────
    "kai-protos",

    # ─── Web framework ─────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",

    # ─── DB ────────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ─── Redis ─────────────────────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",

    # ─── LLM ───────────────────────────────────────────────────────────────
    "litellm>=1.52.0",

    # ─── gRPC (Processing client + AiEngineService server) ─────────────────
    "grpcio>=1.68.0",
    "protobuf>=5.28.0",

    # ─── Observability ─────────────────────────────────────────────────────
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-instrumentation-grpc>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "structlog>=24.4.0",

    # ─── Utilities ─────────────────────────────────────────────────────────
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "python-ulid>=3.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
# Phase D extra — uv sync --extra ml installs these on top of the base set.
ml = [
    "torch>=2.4",
    "sentence-transformers>=3.3.0",
    "qdrant-client>=1.12.0",
    "pgvector>=0.3.6",
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "grpcio-tools>=1.68.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",  # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiengine"]

[[tool.uv.index]]
# CPU-only PyTorch wheels — kept here so that `uv sync --extra ml` still
# avoids the multi-GB nvidia-* CUDA wheels.
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
kai-protos = { path = "../../libs/generated/python", editable = true }
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
