[package]
name = "chunker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Semantic text chunker — paragraph + sentence boundary aware"

[dependencies]
rayon.workspace = true
unicode-segmentation.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
