[package]
name = "processing-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "gRPC + Redis consumer server: chunking + BM25 indexing"

[[bin]]
name = "processing-server"
path = "src/main.rs"

# Phase B5 minimal — only what main.rs uses today. The full surface
# (kai-protos for gRPC, tonic, redis consumer, OpenTelemetry pipeline)
# comes back in Phase E.
[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
